--- a/output/julio2024_08_001_100/analisis.latex
+++ b/output/julio2024_08_001_100/analisis.latex
@@ -11,15 +11,15 @@ El análisis de hipervolumen indica un desempeño consistente del algoritmo en t
 \begin{table}[H]
 \centering
 \caption{Resultados agregados para la instancia Julio (30 ejecuciones)}
-\label{tab:resultados-julio}
-\begin{tabular}{|l|c|c|}
+\label{tab:resultados-julio-completo}
+\begin{tabular}{|l|c|c|c|}
 \hline
-\textbf{Métrica} & \textbf{Objetivo 1} & \textbf{Objetivo 2} \\
+\textbf{Métrica} & \textbf{Objetivo 1} & \textbf{Objetivo 2} & \textbf{Hipervolumen} \\
 \hline
-Media & 288.00 & -13.26 \\
-Desviación estándar & 0.00 & 0.38 \\
-Mejor valor & 288.00 & -13.93 \\
-Peor valor & 288.00 & -12.40 \\
+Media & 288.00 & -13.26 & 0.4001 \\
+Desviación estándar & 0.00 & 0.38 & 0.0107 \\
+Mejor valor & 288.00 & -13.93 & 0.4182 \\
+Peor valor & 288.00 & -12.40 & 0.3752 \\
 \hline
 \end{tabular}
 \end{table}
